--- a/app/src/main/res/menu/login.xml
+++ b/app/src/main/res/menu/login.xml
@@ -1,5 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/theicon"
+        android:enabled="true"
+        android:icon="@drawable/composeicon"
+        android:visible="true"
+        app:showAsAction="always">
 
-
+    </item>
 </menu>
