--- a/app/src/main/res/menu/login.xml
+++ b/app/src/main/res/menu/login.xml
@@ -1,11 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+        <item
+            android:id="@+id/miActionProgress"
+            android:title="Loading..."
+            android:visible="false"
+            android:orderInCategory="100"
+            app:showAsAction="always"
+            app:actionLayout="@layout/action_view_progress" />
     <item
         android:id="@+id/theicon"
         android:enabled="true"
         android:icon="@drawable/composeicon"
         android:visible="true"
         app:showAsAction="always">
-
     </item>
+
+
 </menu>
