--- a/app/src/main/res/layout/activity_reply_tweet.xml
+++ b/app/src/main/res/layout/activity_reply_tweet.xml
@@ -1,9 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepath.apps.restclienttemplate.ReplyTweet">
+    tools:context="com.codepath.apps.restclienttemplate.ComposeActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:counterEnabled="true"
+        app:counterMaxLength="140"
+        app:hintEnabled="false"
+        android:layout_below="@+id/replyingTo"
+        android:layout_alignParentStart="true">
+
+        <EditText
+            android:id="@+id/tweetbox"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="82dp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Tweet your reply"
+            android:inputType="textAutoComplete|textPersonName"
+            android:textAlignment="viewStart" />
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/atweet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onSubmit"
+        android:text="Tweet"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_below="@+id/textInputLayout"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/replyingTo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
+</RelativeLayout>
