--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -48,12 +48,19 @@
         android:layout_alignParentTop="true"
         android:text="TextView" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+    </LinearLayout>
+
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/dtreply"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        app:srcCompat="@drawable/replyicon"
         android:layout_below="@+id/tvBody"
-        android:layout_alignStart="@+id/tvBody" />
+        android:layout_toEndOf="@+id/ivProfileImage"
+        app:srcCompat="@drawable/replyicon" />
 
 </RelativeLayout>
