--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -29,7 +29,10 @@
         android:layout_below="@+id/tvName"
         android:layout_marginLeft="5dp"
         android:layout_toEndOf="@+id/ivProfileImage"
-        android:text="TextView" />
+        android:text="TextView"
+        android:autoLink="all"
+        android:linksClickable="true"
+        />
 
     <TextView
         android:id="@+id/tvUserName"
@@ -48,19 +51,57 @@
         android:layout_alignParentTop="true"
         android:text="TextView" />
 
+    <ImageView
+        android:id="@+id/tlMedia"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_alignStart="@+id/tvBody"
+        android:layout_below="@+id/tvBody"
+        android:layout_weight="0.04"
+        app:srcCompat="@android:color/black" />
+
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tlMedia"
         android:orientation="horizontal">
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/dtreply"
+            android:layout_width="20dp"
+            android:layout_height="26dp"
+            android:layout_below="@+id/tvBody"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/ivProfileImage"
+            android:layout_weight="0.04"
+            app:srcCompat="@drawable/replyicon" />
 
-    <ImageView
-        android:id="@+id/dtreply"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_below="@+id/tvBody"
-        android:layout_toEndOf="@+id/ivProfileImage"
-        app:srcCompat="@drawable/replyicon" />
+        <ImageView
+            android:id="@+id/tlRetweet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.04"
+            app:srcCompat="@drawable/retweet" />
+
+        <ImageView
+            android:id="@+id/tlFavorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.04"
+            app:srcCompat="@drawable/heart" />
+
+        <ImageView
+            android:id="@+id/tlMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.04"
+            app:srcCompat="@drawable/message" />
+
+    </LinearLayout>
 
 </RelativeLayout>
