--- a/app/src/main/res/layout/fragments_tweets_list.xml
+++ b/app/src/main/res/layout/fragments_tweets_list.xml
@@ -3,6 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
+
+    <ProgressBar
+        android:id="@+id/miActionProgress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orderInCategory="100"
+        android:title="Loading..."
+        android:visible="false" />
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
