--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -9,12 +9,13 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_height="100dp"
         app:counterEnabled="true"
         app:counterMaxLength="140"
-        app:hintEnabled="false">
+        app:hintEnabled="false"
+        android:layout_marginTop="26dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <EditText
             android:id="@+id/tweetbox"
@@ -23,6 +24,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="10dp"
             android:ems="10"
             android:hint="What's Happening?"
             android:inputType="textAutoComplete|textPersonName"
@@ -33,11 +35,28 @@
         android:id="@+id/atweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onSubmit"
-        android:text="Tweet"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textInputLayout"
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginRight="10dp"
+        android:background="#1dcaff"
+        android:text="Tweet"
+        android:textColor="@android:color/white"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="sans-serif"
+        android:text="X"
+        android:textColor="#1dcaff"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
