--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,19 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.codepath.apps.restclienttemplate.SearchActivity">
 
-    <SearchView
-        android:id="@+id/thesearch"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
 
     <FrameLayout
         android:id="@+id/flContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/thesearch">
+        android:layout_below="@+id/these">
 
     </FrameLayout>
 </RelativeLayout>
